buildscript {
    repositories {
        maven { setUrl("https://maven.vaadin.com/vaadin-prereleases") }
    }
}

plugins {
	id 'org.springframework.boot' version '2.6.4'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'application'
	id 'java'
	id 'com.vaadin'
	id 'jacoco'
}

group = 'com.weather.app'
version = '1.0.0-SNAPSHOT'

repositories {
	mavenCentral()
	maven { setUrl("https://maven.vaadin.com/vaadin-addons") }
}

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

dependencies {
	implementation 'com.vaadin:vaadin-spring-boot-starter:23.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-mail:2.6.5'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.5'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.5'
	implementation 'org.postgresql:postgresql:42.3.3'

	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'

	testImplementation('org.springframework.boot:spring-boot-starter-test:2.6.5') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	implementation 'org.apache.commons:commons-lang3:3.12.0'
}

dependencyManagement {
	imports {
		mavenBom "com.vaadin:vaadin-bom:$vaadinVersion"
	}
}

jacocoTestReport{
	dependsOn(test)
	reports {
		xml.enabled(true)
		csv.enabled(true)
		html.enabled(true)
	}
}
test {
	useJUnitPlatform()
	finalizedBy(jacocoTestReport)
}


compileJava {
	options.compilerArgs += ['--enable-preview']
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}
